--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "frontend/(.*)", "use": "@vercel/static" }
-  ],
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.9"
+    }
+  },
   "routes": [
-    { "src": "/(.*)", "dest": "frontend/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1.py" },
+    { "src": "/(.*)", "dest": "/frontend/$1" }
   ]
 }
